--- a/flickity.html
+++ b/flickity.html
@@ -4,10 +4,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="author" content="kevinbaykr">
+<meta name="language" content="english">
+<meta name="rating" content="safe for kids">
+<meta name="format-detection" content="telephone=yes"/>
+<meta name=”title” content="Little Lemon"/>
+<meta name="description" content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <link rel="stylesheet" href="style.css">
-<title>flickity tutorial</title>
+<title>Little Lemon</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
