--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-------------------Navigation--------->
 
 
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar" style="background-color:rgb(73, 94, 87)">
         <div class="container">
 
             <img src="img/LL-icon.png" alt="Little Lemon Icon" height="50" class="lemon-icon">
@@ -90,20 +90,20 @@
             <div class="container">
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-12" id="text-shadow">
                         <div class="banner-middle text-center text-justify text-break">
                                 <p> Mediterranean Restaurant</p>
                                 <h3>Little Lemon</h3>
                                 <p>We are a family owned Mediterranean restaurant, <br>
                                 focused on traditional recipes served with a modern twist.</p>
-                                <a href="#reservation-section" class="btn btn-lg" type="button">Make Reservation</a>
+                                <a href="#reservation-section" class="btn btn-outline-warning btn-lg" type="button">Make Reservation</a>
 
                             </div>
 
                 </div>
 
 
-                <div class="col-6">
+                <div class="col-12">
 
                     <div class="banner-social">
                         <i class="fab fa-facebook"></i>
@@ -114,7 +114,7 @@
 
                 </div>
 
-                <div class="col-6">
+                <div class="col-12">
                     <div class="banner-address">
 
                             <p><i class="fas fa-map-marker text-warning p-1"></i> 1234 Altschul, Chicago, CH 10027-0000</p>
@@ -141,15 +141,6 @@
         <div class="container">
 
             <div class="row text-center">
-                <div class="col-lg-3 col-md-12">
-                    <div class="glass-one">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-
-
-                    </div>
-
-
-                </div>
 
                 <div class="col-lg-5 col-md-12">
                     <div class="glass-two">
@@ -158,14 +149,11 @@
                     </div>
 
 
-
-
                 </div>
                 <div class="col-lg-4 col-md-12">
-                        <div class="glass-three text-justify text-center ">
-                    <h3 >Lorem ipsum dolor sit amet</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veritatis nisi, consequatur, laborum libero a neque ducimus. Porro rem illum quo nostrum quisquam asperiores, blanditiis, consectetur.
-                     Possimus facilis velit, voluptatibus!</p>
+                        <div class="glass-three text-justify text-center">
+                    <h3 > An amazing ambience for an amazing dinner.</h3>
+                    <p class="lead">Enjoy all your special occasions. We cater couple and groups.</p>
                      </div>
 
                 </div>
