--- a/index.html
+++ b/index.html
@@ -136,24 +136,24 @@
 
 
 
-    <section class="first-third-column padding">
+    <section class="first-third-column padding center">
 
         <div class="container">
 
             <div class="row text-center">
 
-                <div class="col-lg-5 col-md-12">
+                <div class="col-lg-6 col-md-12">
                     <div class="glass-two">
-                        <img src="img/left.jpg" alt="img" class="img-fluid mt-3">
+                        <img src="img/left.jpg" alt="img" >
 
                     </div>
 
 
                 </div>
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-5 col-md-12";>
                         <div class="glass-three text-justify text-center">
-                    <h3 > An amazing ambience for an amazing dinner.</h3>
-                    <p class="lead">Enjoy all your special occasions. We cater couple and groups.</p>
+                    <h3 style="text-align:left"> An amazing ambience for an amazing dinner.</h3>
+                    <p class="lead" style="text-align:left">Enjoy all your special occasions in our indoor or outdoor locations.</p>
                      </div>
 
                 </div>
@@ -169,31 +169,22 @@
     <!------------------------------------------Second Third Column------->
 
 
-    <section class="second-third-column padding">
+    <section class="second-third-column padding center">
 
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-5 col-md-12">
 
-                    <div class="ice-one  ">
-                        <h3>Velit ipsa quidem debitis amet</h3>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam quae similique asperiores consequatur! Nihil temporibus qui enim, ab voluptates corporis commodi eum maxime. 
-                            Accusamus voluptates a, et quidem! Quo, et?</p>
+                    <div class="ice-one">
+                        <h3 style="text-align:right">Private events</h3>
+                        <p class="lead" style="text-align:right">Celebrate all your major events by booking in advance on our website or contacting us directly.</p>
 
                     </div>
 
                 </div>
 
-                <div class="col-lg-2 col-md-12">
-                    <div class="ice-two">
-                        <hr>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-                    </div>
-
-                    </div>
-
-                    <div class="col-lg-4 col-md-12">
+                    <div class="col-lg-6 col-md-12">
                         <div class="ice-three">
                             <img src="img/right.jpg" alt="img" class="img-fluid">
 
