menu section remains

--- a/index.html
+++ b/index.html
@@ -221,10 +221,8 @@
             <div class="container green">
             <div class="row">
                 <div class="col-12 text-center padding">
-                    <h3>Our Menu</h3>
+                    <h2>Our Menu</h2>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione numquam
-                     eos perferendis itaque hic unde, ad, laudantium minima.</p>
                 </div>
 
             </div>
@@ -910,11 +908,10 @@
 
 
 
-                                <div class="container">
+                                <div class="container green">
                                     <div class="row">
-                                        <div class="col-12 text-center padding">
-                                            <h5>Featured dishes</h5>
-                                            <p> Quibusdam in labore tempore quidem voluptatum ullam soluta! Maiores!</p>
+                                        <div class="col-12 text-center">
+                                            <h2>Featured dishes</h2>
 
                                         </div>
 
@@ -1204,19 +1201,13 @@
                                     </div>
 
                             </div>
-                            <hr class="my-4">
-
-                            <!---------------------------------------Evente Section==========---------------------------->
+                            <!---------------------------------------Event Section==========---------------------------->
 
 
-                                <div class="container padding" id="events-section">
-                                    <div class="row">
-                                        <div class="col-12 text-center text-light">
+                                <div class="container padding col-12" style="background-color:rgb(73, 94, 87)">
+                                        <div class="text-center text-light">
                                             <h3>Upcoming events</h3>
-                                            <p>Check out below for the latest!</p>
                                         </div>
-
-                                    </div>
 
                                 </div>
 
@@ -1226,7 +1217,7 @@
                                     <div class="container">
                                         <div class="row">
                                             <div class="col-9 col-sm-text-center">
-                                                <div class="event-img-title mt-4 text-justify">
+                                                <div class="event-img-title mt-4 text-justify text-shadow">
 
                                                         <span  class="text-warning font-weight-bold"> SEPTEMBER 30, 2023</span>
                                                         <h3 class="text-light font-weight-bold mt-4">The Masters of Oud all the way from Lebanon!</h3>
@@ -1296,7 +1287,6 @@
                                         <div class="col-12 gallery-top">
                                             <div class="gallery-title text-center">
                                                 <h3>Our Gallery</h3>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
                                             </div>
 
@@ -1365,13 +1355,11 @@
                                     <div class="row">
                                         <div class="col-sm-4 my-4 col-xs-12">
                                             <div class="footer-about">
-                                                <p class="text-warning ">
-                                            About us</p>
-
+                                                <img src="img/LL-logo-big-white.png" alt="Little Lemon logo" width="250" class="lemon-logo">
 
                                             <p>We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.</p>
 
-                                                <p>_____&copy;2023 Little Lemon. All rights reserved.</p>
+                                                <p>___&copy;2023 Little Lemon. All rights reserved.</p>
 
 
 
@@ -1388,8 +1376,7 @@
 
                                             <div class="footer-contact">
 
-                                                    <p class="text-warning">
-                                                            Contact us</p>
+                                                    <p>Contact us</p>
 
                                                 <p><i class="fas fa-map-marker"></i> 1234 Altschul, Chicago, CH 10027-0000</p>
                                                 <p> <i class="fas fa-phone-volume"></i>   +1 987 654 3210</p>
@@ -1413,7 +1400,7 @@
 
                                                 <div class="footer-hours">
 
-                                                        <p class="text-warning">OPENING HOURS</p>
+                                                        <p>Opening Hours</p>
                                                         <p>MONDAY - THURSDAY</p>
                                                         <p>10:00 AM - 11:00 PM</p>
                                                         <p>FRIDAY - SUNDAY</p>
